ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-list-react-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - '*.*.niyov.com'
    - '*.niyov.com'
    - niyov.com
    secretName: niyov-wildcard-certificate-tls
  rules:
  - host: todo-list.niyov.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-list-react-service
            port:
              number: 80
  - host: api.todo-list.niyov.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-list-api-service
            port:
              number: 80
